@@ -1126,6 +1126,7 @@ To find the latest change quickly, search ==== :)
 23/06/2002 (Jir)
 - login is done according to the informations sent by the server.
   (race/class addition still needs client update, tho)
+- SKILL_MISC and SKILL_AGILITY
 [B] potion of learning.
 
 
@@ -1144,7 +1145,7 @@ concisely: what's hot now?
 - skill system
   + interfere() should be affected by archery/wizardly skills?
   + no SKILL_BOOMERANG ?
-  + SKILL_SWIM
+  + SKILL_SWIM, AGILITY(+sp), CALMNESS
   + Archery and Hunting should be separate skills?
     (Hunting books for non-archers are too strong)
   + spell_info should be redone
